<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/icon_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_desc"
        style="@style/common_text_title"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/about_desc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <TextView
        android:id="@+id/tv_version"
        style="@style/common_text_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc"
        tools:text="V1.2.3" />

    <RelativeLayout
        android:id="@+id/ll_terms_privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_copyright"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/tv_terms"
            style="@style/common_text_content"
            android:layout_width="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_toLeftOf="@+id/tv_divider"
            android:text="@string/about_terms" />

        <TextView
            android:id="@+id/tv_divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="|"
            android:textColor="@color/text_seconds" />

        <TextView
            android:id="@+id/tv_privacy"
            style="@style/common_text_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_toRightOf="@+id/tv_divider"
            android:text="@string/about_privacy" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_copyright"
        style="@style/common_text_content"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/about_copyright"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>