<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_update_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rect_4_corner"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingBottom="24dp">


    <TextView
        android:id="@+id/choosedialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:singleLine="true"
        android:textStyle="bold"
        android:text="@string/dialog_title"
        android:textColor="@color/text_main"
        android:textSize="24sp"
        android:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dialog_content"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="18dp"
        android:fadeScrollbars="false"
        android:paddingLeft="24dp"
        android:paddingRight="8dp"
        android:scrollbarSize="4dp"
        android:scrollbarStyle="insideOverlay"
        android:scrollbarThumbVertical="@color/line_main"
        android:scrollbars="vertical"
        tools:listitem="@layout/dialog_single_choose_item" />

    <LinearLayout
        android:id="@+id/rl_update_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/choosedialog_left"
            android:layout_width="188dp"
            android:layout_height="56dp"
            android:background="@drawable/rect_4_corner_dialog_btn_light"
            android:gravity="center"
            android:text="@string/dialog_btn_confirm"
            android:textStyle="bold"
            android:textColor="@color/text_main"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/choosedialog_right"
            android:layout_width="188dp"
            android:layout_height="56dp"
            android:layout_marginLeft="40dp"
            android:background="@drawable/rect_4_corner_dialog_btn"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/dialog_btn_cancel"
            android:textColor="@color/text_main"
            android:textSize="24sp" />
    </LinearLayout>

</LinearLayout>